# rtfm-f3-discovery

./: Cargo.toml  memory.x
src/: main.rs
